--- a/script-practice.html
+++ b/script-practice.html
@@ -60,8 +60,8 @@
 							<div id="corner-tr"class="corner"></div>
 							<h3>Skill Set</h3>
 							<p>
-								臺灣科技大學 工業管理系 學士<br>Front-end Dev: CSS, React.js
-								<br>Back-end Dev: Django, Node.js
+								臺灣科技大學 工業管理系 學士<br>Front-end Dev: HTML, CSS, React.js
+								<br>Back-end Dev: Node.js
 							</p>
 							<div id="corner-br"class="corner"></div>
 							<div id="corner-bl"class="corner"></div>
